fixed list alignments

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,7 +9,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   max-height: 500px;
   padding: 15px 25px;
-  margin-bottom: 20px;
+  margin: 20px;
   & img {
     max-width: 500px;
   }
