--- a/app/assets/stylesheets/pets/_list.scss
+++ b/app/assets/stylesheets/pets/_list.scss
@@ -42,3 +42,9 @@
     font-weight: bold;
   }
 }
+
+.pets-all-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
